css/blocks/mobile-overlay.css
.mobile-overlay {
    width: 100%;
    height: 100%;
    padding: 15px 20px;
    margin: 0;
    border: none;
    color: var(--color-light);
    background-color: var(--color-dark-alternate);
}

.mobile-overlay:modal {
    max-width: 100%;
    max-height: 100%;
}

.mobile-overlay__form-wrapper {
    display: flex;
    justify-content: end;
}

.mobile-overlay__form-close-button {
    position: relative;
    display: inline-flex;
    align-items: center;
    width: 48px;
    aspect-ratio: 1;
    background-color: transparent;
    border: none;
}

.mobile-overlay__form-close-button::after,
.mobile-overlay__form-close-button::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    width: 15px;
    height: 3px;
    background-color: #C4C4C4;
    border: none;
}

.mobile-overlay__form-close-button::after {
    rotate: 45deg;
}

.mobile-overlay__form-close-button::before {
    rotate: -45deg;
}

.mobile-overlay__menu {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 70vh;
}

.mobile-overlay__list {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
}

.mobile-overlay__link {
    display: inline-flex;
    align-items: center;
    height: 48px;
    color: inherit;
    text-decoration: none;
}

@media (max-width: 767px) {

    .mobile-overlay__form-close-button:hover {
        background-color: transparent;
    }

    .mobile-overlay__form-close-button:active {
        background-color: var(--color-light);
        border-radius: 10px;
    }
}

